eliminacion de asignacion de documentos

--- a/src/app/creditos/simulador-vista/simulador-vista.component.html
+++ b/src/app/creditos/simulador-vista/simulador-vista.component.html
@@ -115,6 +115,14 @@
         <h6 class="m-0 font-weight-bold"><i class="fas fa-chart-line"></i> Tabla de amortización</h6>
     </div>
     <fieldset>
+        <div class="col-12 card shadow mb-4 p-3">
+            <fieldset class="d-flex align-items-center justify-content-between">
+                <div class="alert alert-warning m-0" role="alert">
+                    <i class="fas fa-exclamation-triangle fa-lg"></i>
+                    La simulación creada se basa en los datos capturados al día de la generación de la simulación y no se podrá exigir estas condiciones en otro momento.
+                </div>                
+            </fieldset>
+        </div>
         <div class="no-padding table-responsive table-hover" style="margin-top: 20px; font-size: 13px;">
             <table class="table table-bordered table-hover">
                 <thead>
