avance de correcciones

--- a/src/app/creditos/detalle-credito/detalle-credito.component.html
+++ b/src/app/creditos/detalle-credito/detalle-credito.component.html
@@ -35,7 +35,7 @@
             </div>
         </fieldset>
         <div class="inputs-container mt-4">
-            <<div class="floating-label">
+            <div class="floating-label">
                 <input type="text" class="inputM" id="monto" placeholder="Monto del crédito" [value]="montoFormateado" disabled>
                 <label for="monto">Monto del Crédito</label>
             </div>            
