--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,64 +1,34 @@
-<div class="container">
+<div class="container py-5">
     <div class="row">
-        <!-- Card 1 -->
-        <div class="col-md-12 mb-4">
-            <div class="card shadow-sm">
-                <div class="card-body">
-                    <h5 class="card-title text-center">Gráfica de Estatus</h5>
-                    <div class="d-flex justify-content-center">
-                        <ngx-charts-pie-chart
-                            [view]="view"
-                            [scheme]="colorScheme"
-                            [results]="pieData"
-                            [legend]="showLegend"
-                            [labels]="showLabels"
-                            [doughnut]="doughnut"
-                            [explodeSlices]="explodeSlices">
-                        </ngx-charts-pie-chart>
-                    </div>
+        <!-- Card 1: Gráfica de Estatus -->
+        <div class="col-md-4 mb-4">
+            <div class="card shadow border-0">
+                <div class="card-body text-center">
+                    <h5 class="card-title">Gráfica de Estatus</h5>
+                    <canvas id="statusChart"></canvas>
                 </div>
             </div>
         </div>
 
-        <!-- Card 2 -->
-        <div class="col-md-12 mb-4">
-            <div class="card shadow-sm">
-                <div class="card-body">
-                    <h5 class="card-title text-center">Amortizaciones por Estatus</h5>
-                    <div class="d-flex justify-content-center">
-                        <ngx-charts-pie-chart
-                            [view]="view"
-                            [scheme]="colorScheme"
-                            [results]="amortizationData"
-                            [legend]="showLegend"
-                            [labels]="showLabels"
-                            [doughnut]="doughnut"
-                            [explodeSlices]="explodeSlices">
-                        </ngx-charts-pie-chart>
-                    </div>
+        <!-- Card 2: Amortizaciones por Estatus -->
+        <div class="col-md-4 mb-4">
+            <div class="card shadow border-0">
+                <div class="card-body text-center">
+                    <h5 class="card-title">Amortizaciones por Estatus</h5>
+                    <canvas id="amortizationChart"></canvas>
                 </div>
             </div>
         </div>
 
-        <!-- Card 3 -->
-        <div class="col-md-12 mb-4">
-            <div class="card shadow-sm">
-                <div class="card-body">
-                    <h5 class="card-title text-center">Pagos por Estatus</h5>
-                    <div class="d-flex justify-content-center">
-                        <ngx-charts-pie-chart
-                            [view]="view"
-                            [scheme]="colorScheme"
-                            [results]="paymentData"
-                            [legend]="showLegend"
-                            [labels]="showLabels"
-                            [doughnut]="doughnut"
-                            [explodeSlices]="explodeSlices">
-                        </ngx-charts-pie-chart>
+        <!-- Card 3: Pagos por Estatus -->
+        <div class="col-md-4 mb-4">
+            <div class="card shadow border-0">
+                <div class="card-body text-center">
+                    <h5 class="card-title">Pagos por Estatus</h5>
+                    <canvas id="paymentChart"></canvas>
+                    <div class="mt-3">
+                        <span class="badge bg-primary p-2 fs-6">Total de pagos este mes: {{ totalMes }}</span>
                     </div>
-                </div>
-                <div class="m-3">
-                    <h3>El total de pagos en este mes es de: {{totalMes}}</h3>
                 </div>
             </div>
         </div>
