modulo basico de notificaciones

--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -47,6 +47,9 @@
     <div class="menu-item" (click)="navigateTo('/quejas_sugerencias')">
         <i class="fas fa-comment-dots"></i> Quejas o Sugerencias
     </div>
+    <div class="menu-item" (click)="navigateTo('/notificaciones')">
+        <i class="fas fa-bell"></i> Notificaciones
+    </div>    
 
     <div class="user-section">
         <div class="user-info">
